--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Project 0, part 1</title>
 </head>
 <body>
+    <h1>Hello, Gocho!</h1>
+    <p id="demo"></p>
     <script src="./script.js"></script>
 </body>
 </html>
